------------------
* Changed license to specifically state GPL version 2
* Minor fixes to sample nagios.cfg config file
* Fix for non-US date formats in command CGI
* Spec file updates
* Include file modifications for C++ event broker modules
* Minor event broker changes (addition of timed event "sleep" data)
* Added some sanity checks during write of status data for full partitions
* Doc updates



2.0b5 - 11/14/2005
------------------
* Typo fix in availability CGI
* Minor changes to sample config files
* Fixed order of include files in config.h for clean compile on OpenBSD 3.6
* Minor fixes in availability and trends CGIs for assumed states during program downtime
* Fixed bug with initial scheduling of active service checks in configs with a large number of passive-only checks
* Fixed bugs with scheduling active host and service checks when active checks were disabled globally
* Host name search in web interface is now case-insensitive
* Fixed bug in times reported by nagiostats utility
* Nagios now drops privileges before reading config files for config verification and scheduling info tests
* Fixed bug where non-config files would occassionally be processed with config directory recursion
* Improvements to init script when stopping Nagios
* Minor changes to improve host and service freshness checking
* Fixed bug with event handlers and logging during soft host recoveries
* Added check for duplicate object names that could adversely affect template resolution
* Updated mini EPN (embedded Perl) test modules
* A few other misc minor fixes



2.0b4 - 08/02/2005
------------------
* Memory leak fixes
* Fixed log message error at start of flapping
* Fixed segfault with invalid servicegroups in service definitions
* Non-existent problems can no longer be acknowledged
* Privileges will now only attempted be dropped if started as root user
* Embedded Perl fixes (to reduce memory leaks)
* Sample CGI config file fixes
* Added $HOSTCHECKTYPE$ and $SERVICECHECKTYPE$ macros