@@ -12,6 +12,7 @@ Nagios Change Log
 * Include file modifications for C++ event broker modules
 * Minor event broker changes (addition of timed event "sleep" data)
 * Added some sanity checks during write of status data for full partitions
+* Sample web server config file changes
 * Doc updates
 
 
